--- a/PagoEfectivo.Net.Test/App.config
+++ b/PagoEfectivo.Net.Test/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name="PagoEfectivoDb" connectionString="Data Source=.;Initial Catalog=VillaMaria;User ID=sa;Password=macedonio"/>
+  </connectionStrings>
   <appSettings>
     <add key="PagoEfectivoAPIEndpoint" value="https://pre1a.services.pagoefectivo.pe/"/>
     <add key="SecretKey" value="MsB3V0seHJY2gcdly7LsNVtXJF+QLGO+l/Oc8z4j"/>
