--- a/PagoEfectivo.WepApi/PagoEfectivo.WepApi.csproj
+++ b/PagoEfectivo.WepApi/PagoEfectivo.WepApi.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PaymentsController.cs" />
+    <Compile Include="Filters\PagoEfectivoHeaderValidator.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
