--- a/PagoEfectivo.WepApi/Web.config
+++ b/PagoEfectivo.WepApi/Web.config
@@ -9,6 +9,10 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="PagoEfectivoAPIEndpoint" value="https://pre1a.services.pagoefectivo.pe/"/>
+    <add key="SecretKey" value="MsB3V0seHJY2gcdly7LsNVtXJF+QLGO+l/Oc8z4j"/>
+    <add key="AccessKey" value="OTc0NDNiODY0M2VmNzk5"/>
+    <add key="IdService" value="1158"/>
   </appSettings>
   <connectionStrings>
     <add name="PagoEfectivoDb" connectionString="Data Source=.;Initial Catalog=VillaMaria;User ID=sa;Password=macedonio"/>
